修改 Material Icons 圖標

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
     <%= htmlWebpackPlugin.options.title %>
   </title>
   <!-- Material design icons cdn -->
-  <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp">
 </head>
 
 <body>
