feat: 新增 favicon & 新增 meta 標籤

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="zh-Hant-TW">
 
 <head>
   <meta charset="utf-8">
@@ -7,8 +7,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>
-    <%= htmlWebpackPlugin.options.title %>
+    碁人館
   </title>
+  <meta name="description" content="碁人館 - 專門為廣大圍棋愛好者提供高品質棋具的圍棋專賣店">
+  <meta name="keywords" content="圍棋,圍棋子,棋墩,棋罐,棋書">
   <!-- Material design icons cdn -->
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp">
